--- a/.github/workflows/daily_scrape.yml
+++ b/.github/workflows/daily_scrape.yml
@@ -3,7 +3,7 @@ name: Daily Scrape
 on:
   schedule:
     # Run at 02:00 UTC every day
-    - cron: '0 2 * * *'
+    - cron: "0 2 * * *"
   workflow_dispatch: # Allow manual trigger
 
 permissions:
@@ -12,32 +12,32 @@ permissions:
 jobs:
   scrape:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-    - name: Run Scraper
-      env:
-        SCRAPER_MOCK_MODE: "false"
-        SCRAPER_DAYS: "1" # Daily incremental scrape
-        SCRAPER_OUTPUT_DIR: "public/data" # Output directly to public/data in root
-      run: |
-        python -m scraper.main
+      - name: Run Scraper
+        env:
+          SCRAPER_MOCK_MODE: "false"
+          SCRAPER_DAYS: "1" # Daily incremental scrape
+          SCRAPER_OUTPUT_DIR: "public/data" # Output directly to public/data in root
+        run: |
+          python -m scraper.main
 
-    - name: Commit and Push Data
-      run: |
-        git config --global user.name 'GitHub Action'
-        git config --global user.email 'action@github.com'
-        git add public/data
-        git diff --quiet && git diff --staged --quiet || (git commit -m "Update planning data [skip ci]" && git push)
+      - name: Commit and Push Data
+        run: |
+          git config --global user.name 'GitHub Action'
+          git config --global user.email 'action@github.com'
+          git add public/data
+          git diff --quiet && git diff --staged --quiet || (git commit -m "Update planning data [skip ci]" && git push)
