--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,11 +1,14 @@
-name: Deploy Frontend to GitHub Pages
+name: Deploy to GitHub Pages
 
 on:
   push:
     branches: [main]
     paths:
-      - "frontend/**"
-      - "data/**"
+      - "src/**"
+      - "public/**"
+      - "package.json"
+      - "vite.config.ts"
+      - "index.html"
   workflow_dispatch:
 
 permissions:
@@ -29,26 +32,18 @@ jobs:
         with:
           node-version: "20"
           cache: "npm"
-          cache-dependency-path: frontend/package-lock.json
+          cache-dependency-path: package-lock.json
 
       - name: Install dependencies
-        run: |
-          cd frontend
-          npm ci
+        run: npm ci
 
       - name: Build
-        run: |
-          cd frontend
-          npm run build
-
-      - name: Copy data files to dist
-        run: |
-          cp -r data frontend/dist/data
+        run: npm run build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: frontend/dist
+          path: dist
 
   deploy:
     environment:
